fixed spacing issue

--- a/client/src/custom.scss
+++ b/client/src/custom.scss
@@ -39,10 +39,11 @@
 }
 
 .mobile-routes-container {
-    flex-direction: column;
+    // flex-direction: column;
     height: 100vh;
+    width: 100vw;
+    padding: 0;
     margin: 0;
-    align-items: center;
 }
 
 .text-center {
@@ -57,6 +58,7 @@
     height: 100%;
     width: 100%;
     margin: 0;
+    padding: 0;
     margin-left: 8vw;
 }
 
